--- a/thttpd-2.29/index.html
+++ b/thttpd-2.29/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD><TITLE>thttpd is running</TITLE></HEAD>
-<BODY BGCOLOR="#99cc99" TEXT="#000000" LINK="#2020ff" VLINK="#4040cc">
+<BODY BGCOLOR="#303030" TEXT="#eeeeee" LINK="#808080" VLINK="#c0c0c0">
 
 <H3>thttpd is running</H3>
 
